syntax = "proto3";
package pointidentity.ssi.v1;

import "pointidentity/ssi/v1/proof.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/pointidentity/pidx-node/x/ssi/types";

message CredentialSchemaDocument {
    repeated string context = 1 [json_name = "@context", (gogoproto.jsontag) = "@context"];
    string type = 2;
    string modelVersion = 3;
    string id = 4;
    string name = 5;
    string author = 6;
    string authored = 7;
    CredentialSchemaProperty schema = 8;
}

message CredentialSchemaProperty {
    string schema = 1;
    string description = 2;
    string type = 3;
    string properties = 4;
    repeated string required = 5;
    bool additionalProperties = 6;
}

message CredentialSchemaState {
    CredentialSchemaDocument credentialSchemaDocument = 1;
    DocumentProof credentialSchemaProof = 2;
}
